overlay menu visibility fixed, carousel indicators added

--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -1,54 +1,13 @@
-.card {
-    background-color: transparent;
-    border: none;
-    margin-top: 150px;
-    // transform: translateY(110px);
-
-    @include large{
-        // margin-top:200px;
-    }
-}
-
 .carousel-item {
     transition: transform 0.8s ease-in-out !important;
 }
 
-.carousel-indicators li {
-    border-radius: 50%;
-    width: 10px;
-    height: 10px;
-    background-color: black;
-    transform: translateY(-30px);
-    z-index: 20;
 
-    @include small {
-        transform: translateY(-90px);
-    }
-
-    @include medium {
-        background-color: black;
-        padding-bottom: 0;
-        z-index: 20;
-        transform: translateY(-50px);
-    }
-
-    @include large {
-        background-color: black;
-        padding-bottom: 0;
-        z-index: 20;
-        transform: translateY(-90px);
-     }
-}
-
-.container-carousel-mobile {
-    max-height: 500px;
-    max-width: 550px;
-    margin: 0 auto;
-    transform: translateY(130px);
-    
-    @include medium {
-        display: none;
-    }
+// Desktop Carousel
+.card {
+    background-color: transparent;
+    border: none;
+    margin-top: 150px;
 }
 
 .container-carousel-desktop {
@@ -60,9 +19,26 @@
     }
 }
 
-
-.carousel-control-next .carousel-control-next-icon{
-    transform: translateY(-30px);
-    background-color: red;
+.carousel-indicators li{
+    background-color: rgb(9, 51, 75);
+    transform: translateY(-105px);
+    height: 10px;
+    width: 10px;
+    border-radius: 100%;
 }
 
+// Mobile Carousel 
+.container-carousel-mobile {
+    max-height: 500px;
+    max-width: 550px;
+    margin: 0 auto;
+    transform: translateY(130px);
+    
+    @include medium {
+        display: none;
+    }
+}
+
+.carousel-control-prev-icon, .carousel-control-next-icon {
+    transform: translateY(-45px);
+}
