--- a/src/styles/_menu-mobile.scss
+++ b/src/styles/_menu-mobile.scss
@@ -5,9 +5,9 @@
     backdrop-filter:  blur(10px) brightness(35%) ; 
     position: absolute;
     z-index: 20;
-    opacity: 0;
+    display: none;
     margin: 0 auto;
-    transition: opacity 0.3s;
+   
 
     &__menu {
         width: 100%;
@@ -58,8 +58,7 @@
 }
 
 .active {
-    opacity: 1;
-    transition: opacity 0.3s; 
+    display: block;
 }
 
 .overlay__item:hover {
