--- a/src/styles/_price.scss
+++ b/src/styles/_price.scss
@@ -21,7 +21,6 @@
         color: #315259;
         font-size: 30px;
         text-align: center;
-        padding-top: 5%;
         margin-bottom: 25px;
 
         @include large  {
