--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -212,12 +212,6 @@
   font-family: "Poppins", sans-serif;
 }
 
-.card {
-  background-color: transparent;
-  border: none;
-  margin-top: 150px;
-}
-
 .carousel-item {
   -webkit-transition: -webkit-transform 0.8s ease-in-out !important;
   transition: -webkit-transform 0.8s ease-in-out !important;
@@ -225,41 +219,30 @@
   transition: transform 0.8s ease-in-out, -webkit-transform 0.8s ease-in-out !important;
 }
 
-.carousel-indicators li {
-  border-radius: 50%;
-  width: 10px;
-  height: 10px;
-  background-color: black;
-  -webkit-transform: translateY(-30px);
-          transform: translateY(-30px);
-  z-index: 20;
+.card {
+  background-color: transparent;
+  border: none;
+  margin-top: 150px;
 }
 
-@media (min-width: 540px) {
-  .carousel-indicators li {
-    -webkit-transform: translateY(-90px);
-            transform: translateY(-90px);
-  }
+.container-carousel-desktop {
+  display: none;
 }
 
 @media (min-width: 768px) {
-  .carousel-indicators li {
-    background-color: black;
-    padding-bottom: 0;
-    z-index: 20;
-    -webkit-transform: translateY(-50px);
-            transform: translateY(-50px);
+  .container-carousel-desktop {
+    display: initial;
+    margin-top: 100px;
   }
 }
 
-@media (min-width: 991px) {
-  .carousel-indicators li {
-    background-color: black;
-    padding-bottom: 0;
-    z-index: 20;
-    -webkit-transform: translateY(-90px);
-            transform: translateY(-90px);
-  }
+.carousel-indicators li {
+  background-color: #09334b;
+  -webkit-transform: translateY(-105px);
+          transform: translateY(-105px);
+  height: 10px;
+  width: 10px;
+  border-radius: 100%;
 }
 
 .container-carousel-mobile {
@@ -276,21 +259,9 @@
   }
 }
 
-.container-carousel-desktop {
-  display: none;
-}
-
-@media (min-width: 768px) {
-  .container-carousel-desktop {
-    display: initial;
-    margin-top: 100px;
-  }
-}
-
-.carousel-control-next .carousel-control-next-icon {
-  -webkit-transform: translateY(-30px);
-          transform: translateY(-30px);
-  background-color: red;
+.carousel-control-prev-icon, .carousel-control-next-icon {
+  -webkit-transform: translateY(-45px);
+          transform: translateY(-45px);
 }
 
 .comment {
@@ -447,10 +418,8 @@
           backdrop-filter: blur(10px) brightness(35%);
   position: absolute;
   z-index: 20;
-  opacity: 0;
+  display: none;
   margin: 0 auto;
-  -webkit-transition: opacity 0.3s;
-  transition: opacity 0.3s;
 }
 
 .overlay__menu {
@@ -517,9 +486,7 @@
 }
 
 .active {
-  opacity: 1;
-  -webkit-transition: opacity 0.3s;
-  transition: opacity 0.3s;
+  display: block;
 }
 
 .overlay__item:hover {
@@ -848,7 +815,6 @@
   color: #315259;
   font-size: 30px;
   text-align: center;
-  padding-top: 5%;
   margin-bottom: 25px;
 }
 
